--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
-  "include": ["./*"],
-  "exclude": ["./node_modules/"],
-  "compilerOptions": {
-    "target": "es2016",                                  
-    "module": "CommonJS",                                
-    "rootDir": "./",                                  
-    "esModuleInterop": true,                                      
-    "forceConsistentCasingInFileNames": true,            
-    "strict": true,                                      
-    "skipLibCheck": true                                 
-  }, 
+   "compilerOptions": {
+      "target": "es2016",
+      "module": "CommonJS",
+      "rootDir": "./src",
+      "baseUrl": ".",
+      "declaration": true,
+      "outDir": "./dist",
+      "declarationDir": "./dist/declaration",
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "strict": true,
+      "skipLibCheck": true
+   }
 }
